--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,22 @@
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
 
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-headers.css";
 @import "components/user-component.css";
+@import "components/badge.css";
+@import "components/icon-row.css";
 
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
+  padding-top: 115px;
   height: 1000vh;
-  position: relative;
 }
 
 .main-screen {
