--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,10 +18,23 @@
   color: #2e363e;
 }
 
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(6.5px) scaleY(0.8);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__comment-notification {
   position: absolute;
   left: 15px;
-  bottom: 15px;
+  bottom: 20px;
+  animation: notificationAnimation 1.5s ease-in-out infinite;
 }
 
 .nav__red-dot-notification {
@@ -32,4 +45,31 @@
   position: absolute;
   left: 30px;
   bottom: 28px;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(80px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.4s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.5s;
 }
