--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,5 +1,5 @@
 .welcome-header {
-  margin: 95px 0px;
+  margin: 60px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -7,7 +7,7 @@
 }
 
 .welcome-header__title {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   font-size: 25px;
   font-weight: 600;
 }
@@ -15,6 +15,7 @@
 .welcome-header__text {
   width: 60%;
   color: rgba(112, 112, 112, 0.7);
+  margin-bottom: 10px;
 }
 
 /* 아래부터 등장하는 id 지정을 이용한 스타일 부여는 
@@ -64,4 +65,32 @@
   color: inherit;
   font-size: 13px;
   margin-bottom: 20px;
+}
+
+#login-btn {
+  margin-top: 50px;
+}
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 132px;
+  animation: hideSplashScreen 0.4s ease-in-out forwards;
+  animation-delay: 1s;
 }
