--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -17,7 +17,7 @@
 
 .icon-row__icon span {
   margin-top: 15px;
-  font-weight: 600;
+  font-size: 14px;
 }
 
 #icon-row__contacts-text--less-top-margin {
