--- a/css/components/screen-limit.css
+++ b/css/components/screen-limit.css
@@ -28,6 +28,8 @@
   justify-content: center;
   align-items: center;
   font-size: 32px;
+  overflow: hidden !important;
+  touch-action: none;
 }
 
 @media (orientation: portrait) {
