--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -17,7 +17,7 @@
 #chat-screen .alt-header {
   background-color: #abc1d1;
   top: 80px;
-  padding: 30px;
+  padding-top: 30px;
   z-index: 1;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .main-chat {
-  margin-top: 10px;
+  margin-top: -20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,10 +43,10 @@
 .chat__timestamp {
   color: white;
   background-color: #92a4b2;
-  padding: 15px;
+  padding: 10px 15px;
   border-radius: 25px;
   font-size: 14px;
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
 .message-row {
