--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,6 +1,10 @@
+.find-screen .icon-row {
+  margin-top: -20px;
+}
+
 .recommended-friends {
-  margin: 25px 0px;
-  padding: 25px 0px;
+  margin: 15px 0px;
+  padding: 15px 0px;
   border-top: var(--main-border);
   border-bottom: var(--main-border);
 }
@@ -12,11 +16,10 @@
 }
 
 .recommended-friends span {
-  margin: 110px 0;
+  margin: 60px 0;
   display: block;
   text-align: center;
   color: var(--grey-font-color);
-  font-weight: 600;
 }
 
 .open-chat__header {
