--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,12 +1,13 @@
 #friends-display-link {
-  padding: 15px 0px;
+  padding: 12px 0px;
   font-size: 16px;
   font-weight: 600;
   background-color: #fafafa;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: -35px;
 }
 
 .friends-display-link__column {
