Completed CSS grid work for icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 @import "components/screen-headers.css";
 @import "components/user-component.css";
 @import "components/badge.css";
-@import "components/icon-row.css";
+@import "components/icon-container.css";
 @import "components/alt-screen-header.css";
 @import "components/screen-limit.css";
 
