--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -2,11 +2,6 @@
   margin-top: -25px;
 }
 
-.more-screen .icon-row {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
 .more-suggestions {
   margin-top: 20px;
   border-top: var(--main-border);
@@ -20,12 +15,14 @@
   margin-bottom: 20px;
 }
 
-.more-suggestions__icons {
-  display: flex;
+.more-suggestions__icon-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  row-gap: 3px;
 }
 
 .more-suggestions__icon {
-  margin-right: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,7 +43,7 @@
 
 .more-suggestions__icon-text {
   font-size: 14px;
-  color: var(--grey-font-color);
+  opacity: 0.8;
 }
 
 .more-suggestions__icon-image img {
