Icon-container updated
container width
repeat(4, 25%) --> repeat(4, 1fr)

--- a/css/components/icon-container.css
+++ b/css/components/icon-container.css
@@ -1,6 +1,6 @@
 .icon-container {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
+  grid-template-columns: repeat(4, 1fr);
   margin-bottom: 10px;
 }
 
