--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -17,7 +17,7 @@
 
 .more-suggestions__icon-container {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
+  grid-template-columns: repeat(4, 1fr);
   row-gap: 3px;
 }
 
